[package]
name = "raxios"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.144"}
anyhow = {version = "1.0.63"}
thiserror = {version = "1.0.33"}

[dev-dependencies]
httpmock = {version = "0.6.6"}
serde_json = {version = "1.0.85"}
tokio = {version = "1.21.1", features = ["full"]}