[package]
name = "raxios"
version = "0.0.4-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/dbidwell94/raxios"
description = "An easy to use HTTP client for Rust based off of JS Axios library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.144"}
anyhow = {version = "1.0.63"}
thiserror = {version = "1.0.33"}
bytes = {version = "1.2.1"}
serde_json = {version = "1.0.85"}

[dev-dependencies]
httpmock = {version = "0.6.6"}
tokio = {version = "1.21.1", features = ["full"]}