[package]
name = "raxios"
version = "0.5.1-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/dbidwell94/raxios"
description = "An easy to use HTTP client for Rust based off of JS Axios library"
keywords = ["async", "http", "axios", "web", "reqwest"]
authors = ["Devin Bidwell <dbidwell94@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11"}
anyhow = {version = "1.0.63"}
thiserror = {version = "1.0.33"}
bytes = {version = "1.2.1"}
serde = {version = "1.0.144"}
serde_json = {version = "1.0.85"}
serde_urlencoded = {version = "0.7.1"}
serde-xml-rs = {version = "0.6.0"}

[dev-dependencies]
httpmock = {version = "0.6.6"}
tokio = {version = "1.21.1", features = ["full"]}
